Fix color of branding line on mobile

--- a/sass/_single.scss
+++ b/sass/_single.scss
@@ -111,7 +111,7 @@
         margin: var(--half-grid-margin) auto;
     }
 
-    // Ausnahme: innerhalb eines Posts-Sliders → zurück auf „normal“
+    // Ausnahme: innerhalb eines Posts-Sliders → zurück auf „normal"
     .posts-slider .entry-meta,
     .archive-article .entry-meta {
         width: unset;
@@ -246,7 +246,6 @@
             display: none;
         }
 
-
         .archive-article {
 
             .entry-content {
@@ -257,11 +256,4 @@
             }
         }
     }
-
-}
-
-.wp-singular .display-single:has(.entry-content > .wp-block-cover:first-child) {
-
-    padding: 0;
-
 }
